# Siftlane

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cursor/rules/: ci-gates.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
crates/siftlane-core/: Cargo.toml
crates/siftlane-core/src/: error.rs  lib.rs  model.rs  remote.rs  transfer.rs
crates/siftlane-ftp/: Cargo.toml
crates/siftlane-ftp/src/: lib.rs
crates/siftlane-sftp/: Cargo.toml
crates/siftlane-sftp/src/: client.rs  lib.rs
docs/: architecture.md  threat-model.md
scripts/: resilientIndexHtml.ts  run-tauri.mjs  sign-macos-dev-binary.sh
src/: App.test.tsx  App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  package.rs  secrets.rs  state.rs  storage.rs  transfers.rs
src/components/: ContextMenu.tsx  FileInfoDialog.tsx  FilePane.tsx  FilePaneContextMenu.tsx  GoToPathDialog.tsx  ImagePreview.tsx  PathSuggestInput.tsx  TransferPanel.tsx
src/components/LoadingOverlay/: LoadingOverlay.test.tsx  LoadingOverlay.tsx
src/components/MarkdownPreview/: MarkdownLink.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx
src/components/SavedActions/: SavedActionDialog.tsx  SavedActions.test.tsx  SessionActionsMenu.tsx  index.ts  kinds.ts  runSavedAction.ts
src/components/Settings/: Settings.test.tsx  SettingsPanels.tsx  SettingsRow.tsx  SettingsSidebar.tsx  SettingsView.tsx  categories.ts  index.ts
src/components/Updater/: AppUpdater.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  index.ts  useAppUpdater.ts
src/hooks/: useAppVersion.ts
src/lib/: fileSort.ts  format.ts  githubReleaseNotes.test.ts  githubReleaseNotes.ts  ipc.ts  media.ts  paths.test.ts  paths.ts  platform.ts  transferFilters.ts
src/test/: setup.ts
