[package]
name = "siftlane-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "siftlane_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
async-trait.workspace = true
chrono.workspace = true
keyring = "4.1.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
siftlane-core = { path = "../crates/siftlane-core" }
siftlane-ftp = { path = "../crates/siftlane-ftp" }
siftlane-sftp = { path = "../crates/siftlane-sftp" }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-log = "2.9.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-window-state = "2.4.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
