[package]
name = "siftlane-sftp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
russh.workspace = true
russh-sftp.workspace = true
secrecy.workspace = true
siftlane-core = { path = "../siftlane-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
